<resources>
    <string name="app_name">Ecommerce</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_orders">Orders</string>
    <string name="menu_my_cart">My Cart</string>
    <string name="menu_favourites">Favourites</string>
    <string name="menu_setting">Setting</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_exit">Exit</string>
    <string name="menu_dark_mode">Dark Mode</string>
    <string name="new_arrival">New Arrival</string>
    <string name="gulberg_III_lahore">Gulberg III Lahore</string>
    <string name="dha_phase_II_house_no_101">DHA Phase II house No# 101</string>
    <string name="man">Man</string>
    <string name="women">Women</string>
    <string name="kids">Kids</string>
    <string name="bridal">Bridal</string>
    <string name="accountant_name">accountant_name</string>
    <string name="card_number">Card Number</string>
    <string name="expiry_date">Expiry Date</string>
    <string name="ccv">CCV</string>
    <string name="next">Next</string>
    <string name="men_s">Men\'s</string>
    <string name="good">Good</string>
    <string name="_30_reviews">30 Reviews</string>
    <string name="description">Description</string>
    <string name="complete_description">here is the new product of winter collection. New products suit to all male, females, kids. You can buy this any shop. If you want to order it online you can download our app to order this</string>
    <string name="select_size">Select Size</string>
    <string name="quantity">Quantity</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="women_s_fashion">Women\'s Fashion</string>
    <string name="fashion_description">They were a big hit last summer, and the trend is poised to keep growing this year. And, it’s not difficult to understand why. They’re comfortable, stylish, and help to protect wearers from the sun — a must-have for all fashionable beach-goers.</string>
    <string name="brand_name">Zara</string>
    <string name="shipping_address">DHA Phase II house No# 101</string>
    <string name="subtotal">Subtotal</string>
    <string name="shipping">Shipping</string>
    <string name="discount">Discount</string>
    <string name="total">Total</string>
    <string name="place_order">Place Order</string>
    <string name="name">Name</string>
    <string name="e_mail">E-mail</string>
    <string name="city">City</string>
    <string name="address">Address</string>
    <string name="postal_code">Postal Code</string>
    <string name="country">Country</string>
    <string name="phone_no">Phone No</string>
    <string name="update_profile">Update profile</string>
    <string name="congratulations">Congratulations</string>
    <string name="order_completed">Order Completed</string>
    <string name="submit">Submit</string>
    <string name="register">Register</string>
    <string name="log_in">Log In</string>
    <string name="full_name">Full Name</string>
    <string name="state">State</string>
    <string name="add_address">Add Address</string>
    <string name="men_description">Here is the winter colletions for men. New Arrival in the market with 50% discount you can any shop of this brand</string>
    <string name="continue_to_payment">Continue to payment</string>
    <string name="let_s_login">Let\'s Login.</string>
    <string name="password">Password</string>
    <string name="let_s_register">Let\'s Register.</string>
    <string name="first_name">first name</string>
    <string name="last_name">last name</string>
    <string name="confirm_password">confirm password</string>
    <string name="categories">Categories</string>
    <string name="see_all">See All</string>
    <string name="featured">Featured</string>
    <string name="best_sellings">Best Sellings</string>
    <string name="_22_sep_2021">22 sep 2021</string>
    <string name="order_date">Order Date</string>
    <string name="mens_style">Mens Style</string>
    <string name="order_again">Order Again</string>
    <string name="location">Location</string>
    <string name="language">Language</string>
    <string name="dark_mode">Dark Mode</string>
</resources>