<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_outline_person_24"
            android:title="@string/menu_profile" />

        <item
            android:id="@+id/nav_orders"
            android:icon="@drawable/order"
            android:title="@string/menu_orders" />
        <item
            android:id="@+id/nav_my_cart"
            android:icon="@drawable/ic_cart"
            android:title="@string/menu_my_cart" />
        <item
            android:id="@+id/nav_favourites"
            android:icon="@drawable/ic_favourite"
            android:title="@string/menu_favourites" />
        <item
            android:id="@+id/nav_setting"
            android:icon="@drawable/ic_outline_settings_24"
            android:title="@string/menu_setting" />
        <!--<item
            android:id="@+id/nav_privacy_policy"
            android:icon="@drawable/ic_policy"
            android:title="Privacy Policy" />-->
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_outline_logout_24"
            android:title="@string/menu_logout" />

    </group>
</menu>