<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.fcodex.ecommerce.NavFragments.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.fcodex.ecommerce.NavFragments.ProfileFragment"
        android:label="@string/menu_profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/nav_orders"
        android:name="com.fcodex.ecommerce.NavFragments.OrdersFragment"
        android:label="@string/menu_orders"
        tools:layout="@layout/fragment_orders" />

    <fragment
        android:id="@+id/nav_my_cart"
        android:name="com.fcodex.ecommerce.NavFragments.MyCartFragment"
        android:label="@string/menu_my_cart"
        tools:layout="@layout/fragment_my_cart" />

    <fragment
        android:id="@+id/nav_favourites"
        android:name="com.fcodex.ecommerce.NavFragments.FavouriteFragment"
        android:label="@string/menu_favourites"
        tools:layout="@layout/fragment_favourite" />

    <fragment
        android:id="@+id/nav_setting"
        android:name="com.fcodex.ecommerce.NavFragments.SettingFragment"
        android:label="@string/menu_setting"
        tools:layout="@layout/fragment_setting" />

</navigation>