<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="10"
    android:orientation="vertical"
    tools:context=".Activities.AddressActivity">

    <include layout="@layout/custom_action_bar"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:orientation="vertical">
<RadioGroup
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clickable="true">
    <RadioButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="10dp"
        android:text="@string/gulberg_III_lahore"
        android:id="@+id/address_one"/>

    <RadioButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/dha_phase_II_house_no_101"
        android:id="@+id/address_two"/>
</RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="6.1"
        android:orientation="vertical">


    </LinearLayout>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/confirm"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:backgroundTint="#BF122C"
            android:fitsSystemWindows="true"
            android:gravity="center"
            android:text="@string/next"
            android:textAllCaps="false"
            android:textColor="#fff"
            android:textSize="20sp"/>
</LinearLayout>